--- a/index.html
+++ b/index.html
@@ -1,1 +1,20 @@
-
+<!DOCTYPE html>
+<html lang="es">
+<head>
+    <meta charset="UTF-8">
+    <meta name="viewport" content="width=device-width, initial-scale=1.0">
+    <link rel="stylesheet" href="styles.css">
+    <title>Caja de Regalo Virtual</title>
+</head>
+<body>
+    <div class="caja" id="caja" onclick="abrirCaja()">
+        <!-- Contenido visible de la caja -->
+        <img src="caja_cerrada.png" alt="Caja cerrada">
+    </div>
+    <div class="sorpresa" id="sorpresa">
+        <!-- Contenido oculto de la caja -->
+        <img src="sorpresa.png" alt="Sorpresa">
+    </div>
+    <script src="script.js"></script>
+</body>
+</html>
